# nsmbw-project

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  mkwcat-nsmbw-template.xml  mkwcat-nsmbw.xml.template  module.ld  platform.mk  sources.mk
riivolution/: CMakeLists.txt  mkwcat-nsmbw.arc  mkwcat-nsmbw.xml
source/: AddressMapper.h  Asm.h  CMakeLists.txt  Four.cpp  Four.h  Module.cpp  Module.ld  PatchRel.h  Port.h  Region.h  Rel.cpp  System.h  Types.h  sources.mk
source/egg/: CMakeLists.txt
source/egg/audio/: eggAudioMgr.h  eggAudioRmtSpeaker.h  eggSoundHeapMgr.h
source/egg/core/: CMakeLists.txt  eggAllocator.h  eggController.cpp  eggController.h  eggDisposer.cpp  eggDisposer.h  eggDvdFile.cpp  eggDvdFile.h  eggDvdRipper.cpp  eggDvdRipper.h  eggExpHeap.cpp  eggExpHeap.h  eggFile.h  eggFrmHeap.h  eggHeap.cpp  eggHeap.h  eggScene.h  eggSingleton.h  eggStreamDecomp.cpp  eggStreamDecomp.h
source/egg/gfx/: CMakeLists.txt  eggFrustum.h  eggScreen.cpp  eggScreen.h  eggStateGX.h
source/egg/math/: CMakeLists.txt  eggMath.cpp  eggMath.h  eggMatrix.h  eggQuat.h  eggVector.h
source/egg/prim/: eggBitFlag.h  eggBuffer.h
source/egg/util/: CMakeLists.txt  eggEffect.cpp  eggEffect.h  eggExEffect.cpp  eggExEffect.h
source/mkwcat/: AddressMapper.hpp  Asm.h  Assert.hpp  Attribute.hpp  BaseTypes.hpp  Concepts.hpp  Literals.hpp  Macro.hpp  NoInitialize.hpp  Region.hpp  Relocate.hpp  ToString.hpp  VTable.hpp
source/msl/: CMakeLists.txt
source/msl/c/: CMakeLists.txt  file_io.c  limits.h  mem.c  printf.c  scanf.c  stdio.h  stdlib.h  string.c  string.h  strtoul.c
source/msl/cpp/: array  bit  cassert  cfloat  climits  cmath  concepts  cstdarg  cstddef  cstdio  cstdlib  cstring  cwchar  functional  ios  iterator  memory  numeric  optional  string  string_view  type_traits  utility  vector
source/msl/msl_c/: assert.h  file_io.c  float.h  limits.h  math.h  mbstring.c  mem.c  printf.c  scanf.c  stddef.h  stdio.h  stdlib.h  string.c  string.h  strtoul.c  wchar.h  wchar_io.c
source/msl/msl_cpp/: algorithm  array  bit  cassert  cfloat  climits  cmath  cstdarg  cstddef  cstdint  cstdio  cstdlib  cstring  cwchar  iterator  limits  memory  new  tuple  type_traits  utility  variant
source/msl/runtime/: CMakeLists.txt  __mem.c  cxa.c  global_destructor_chain.c  runtime.c  stack_chk.c
source/nw4r/: CMakeLists.txt
source/nw4r/ef/: Handle.h
source/nw4r/g3d/: CMakeLists.txt  ResFile.cpp  g3d_3dsmax.h  g3d_anmcamera.h  g3d_anmchr.h  g3d_anmclr.h  g3d_anmfog.h  g3d_anmobj.h  g3d_anmscn.h  g3d_anmshp.h  g3d_anmtexpat.h  g3d_anmtexsrt.h  g3d_anmvis.h  g3d_basic.h  g3d_calcview.h  g3d_calcworld.h  g3d_camera.h  g3d_cpu.h  g3d_dcc.h  g3d_draw.h  g3d_draw1mat1shp.h  g3d_fog.h  g3d_gpu.h  g3d_init.h  g3d_light.h  g3d_maya.h  g3d_obj.h  g3d_resanm.h  g3d_resanmcamera.h  g3d_resanmchr.h  g3d_resanmclr.h  g3d_resanmfog.h  g3d_resanmscn.h  g3d_resanmshp.h  g3d_resanmtexpat.h  g3d_resanmtexsrt.h  g3d_resanmvis.h  g3d_rescommon.h  g3d_resdict.h  g3d_resfile.h  (+18 more)
source/nw4r/lyt/: DrawInfo.h  Layout.h  Material.h  Pane.h  Picture.h  ResourceAccessor.h  Resources.h  TexMap.h  TextBox.h  Types.h  Window.h
source/nw4r/math/: geometry.h  mtx.h  triangular.h  types.h  vec.h
source/nw4r/snd/: BasicSound.h  CMakeLists.txt  Common.h  DvdSoundArchive.cpp  DvdSoundArchive.h  SoundActor.cpp  SoundActor.h  SoundArchive.cpp  SoundArchive.h  SoundArchiveFile.cpp  SoundArchiveFile.h  SoundArchiveLoader.cpp  SoundArchiveLoader.h  SoundArchivePlayer.h  SoundHandle.h  SoundHeap.h  SoundStartable.h  Util.cpp  Util.h
source/nw4r/ut/: BinaryFileFormat.h  Color.h  LinkList.h  List.cpp  List.h  Rect.h  RuntimeTypeInfo.h
source/rapidjson/: allocators.h  reader.h
source/rapidjson/internal/: stack.h
source/revolution/: CMakeLists.txt  arc.h  dvd.h  fs.h  gx.h  kpad.h  mem.h  mtx.h  nand.h  os.h  pad.h  sc.h  si.h  tpl.h  types.h  vi.h  wpad.h
source/revolution/ai/: CMakeLists.txt
source/revolution/arc/: CMakeLists.txt  arc.c
source/revolution/ax/: CMakeLists.txt
source/revolution/base/: CMakeLists.txt  PPCArch.c  PPCArch.h
source/revolution/dvd/: CMakeLists.txt  dvdfs.c
source/revolution/fs/: CMakeLists.txt  fs.c
source/revolution/gx/: GXAttr.h  GXEnum.h  GXGeometry.h  GXHardware.h  GXLight.h  GXPixel.h  GXStruct.h  GXTev.h  GXTransform.h  GXVert.h
source/revolution/kpad/: CMakeLists.txt  KPAD.c
source/revolution/mtx/: CMakeLists.txt  vec.c
source/revolution/nand/: CMakeLists.txt  NANDCheck.c  NANDCore.c  NANDErrorMessage.c  NANDLogging.c  NANDOpenClose.c  nand.c
source/revolution/os/: CMakeLists.txt  OSAudioSystem.c  OSCache.c  OSCache.h  OSContext.c  OSContext.h  OSCrc.c  OSError.c  OSError.h  OSExec.c  OSFatal.c  OSFatal.h  OSFont.c  OSInterrupt.c  OSInterrupt.h  OSIpc.c  OSLaunch.c  OSLink.c  OSLink.h  OSMutex.c  OSMutex.h  OSThread.c  OSThread.h  OSTime.c  OSTime.h  __ppc_eabi_init.c  __start.c
source/revolution/pad/: CMakeLists.txt  Pad.c  PadClamp.c  padClamp.c
source/revolution/si/: CMakeLists.txt  SIBios.c  SISamplingRate.c
source/revolution/vi/: CMakeLists.txt  i2c.c  vi.c  vi3in1.c
source/revolution/wpad/: CMakeLists.txt  WPAD.c
source/runtime/: __mem.c  runtime.c
source/wiimj2d/: CMakeLists.txt  Counter.cpp  DynamicLink.cpp  mkwcat.rsid  wiimj2d.rsid
source/wiimj2d/c/: c_list.h
source/wiimj2d/common/: c_bitmask.h  c_math.h
source/wiimj2d/component/: CMakeLists.txt  c_array.h  c_bitmask.h  c_iterator.h  c_json.cpp  c_json.h  c_lib.cpp  c_lib.h  c_list.cpp  c_math.cpp  c_random.cpp  c_random.h  c_tree.cpp  c_unary_tree.cpp  c_unary_tree.h
source/wiimj2d/d/: d_2d.cpp  d_2d.h  d_CharacterChangeIndicator.cpp  d_CharacterChangeIndicator.h  d_CharacterChangeSelectArrow.cpp  d_CharacterChangeSelectArrow.h  d_CharacterChangeSelectBase.cpp  d_CharacterChangeSelectBase.h  d_CharacterChangeSelectContents.cpp  d_CharacterChangeSelectContents.h  d_ControllerInformation.h  d_NumberOfPeopleChange.cpp  d_NumberOfPeopleChange.h  d_SelectPlayer.cpp  d_SelectPlayer.h  d_WiiStrap.cpp  d_WiiStrap.h  d_base.h  d_base_actor.h  d_game_common.cpp  d_info.cpp  (+9 more)
(+1036 files in other folders)
