add_subdirectory(ai)
add_subdirectory(arc)
add_subdirectory(ax)
add_subdirectory(base)
add_subdirectory(os)
add_subdirectory(si)
add_subdirectory(vi)
add_subdirectory(mtx)
add_subdirectory(dvd)
add_subdirectory(nand)
add_subdirectory(pad)
add_subdirectory(wpad)
add_subdirectory(kpad)
add_subdirectory(fs)